<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="wrap_content"
    >

        <TextView
                android:text="Help"
                android:layout_width="146dp"
                android:layout_height="27dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView2" android:textSize="18sp"
                android:textStyle="bold" android:textAlignment="center"/>
        <TextView
                android:text="@string/help_note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" android:textSize="15sp"/>
        <TextView
                android:text="@string/label_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="53dp"
                android:layout_marginStart="8dp" android:layout_marginBottom="13dp"
                app:layout_constraintBottom_toTopOf="@+id/textView5" android:textSize="14sp" android:textStyle="bold"/>
        <TextView
                android:text="@string/label_help_bits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8" android:textStyle="bold"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView5"/>
        <TextView
                android:text="@string/label_help_bitsifo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="12dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:textAlignment="viewStart"
                app:layout_constraintHorizontal_bias="1.0" android:textSize="15sp"/>
        <TextView
                android:text="@string/label_about_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/textView11" android:textStyle="bold" android:textSize="18sp"
                app:layout_constraintHorizontal_bias="0.501" android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textView10"/>
        <TextView
                android:text="@string/about_help"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView12" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/textView11" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginEnd="8dp" android:textSize="15sp"/>
        <TextView
                android:text="@string/developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/textView13"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView12"
                android:textSize="15sp"/>
        <TextView
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/textView14"
                android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/textView13"
                android:textStyle="italic" android:textColor="@color/colorAccent" android:textSize="15sp"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>